--- a/index.html
+++ b/index.html
@@ -1,19 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" type="text/css" href="stylesheet.css">
+
         <style>
-            #myContainer {
-                width: 400px;
-                height: 400px;
-                position: relative;
-                background: yellow;
-            }
-            
-            #myAnimation {
-                width: 50px;
-                height: 50px;
-                position: absolute;
-            }
+
         </style>
     </head>
     <body>
@@ -25,24 +16,7 @@
             <div id="myAnimation"></div>
         </div>
 
-        <script>
-            function myMove() {
-
-                var elem = document.getElementById("myAnimation");
-                var pos = 0;
-                var interval = setInterval(frame, 10);
-
-                function frame() {
-                    if (pos == 350) {
-                        clearInterval(interval);
-                    }
-                    else
-                    {
-                        pos++;
-                        elem.style.top = pos + 'px';
-                    }
-                }
-            }
-        </script>
+        <script type="text/javascript" src="script.js"></script>
+        
     </body>
 </html>
